remove more junk

--- a/src/ViewportViewExtension/ViewportViewExtension/Views/ViewportView.xaml
+++ b/src/ViewportViewExtension/ViewportViewExtension/Views/ViewportView.xaml
@@ -14,5 +14,5 @@
              d:DesignHeight="525"
              d:DesignWidth="350">
 
-    <cefSharp:ChromiumWebBrowser x:Name="Browser" Address="{Binding Address}"/>
+    <cefSharp:ChromiumWebBrowser x:Name="Browser" Address="{Binding Path=BrowserAddress}"/>
 </UserControl>
